# sharkalyze

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  a.txt  docker-compose.yml  get_path.py  good.txt  package-lock.json  package.json  pyproject.toml  ruff.toml  sus.txt
.github/: CODEOWNERS  CODESTYLE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-failing-test.md  3-docs-bug.md  4-feature-request.md  5-enhancement-request.md  6-security-report.md
.github/workflows/: linter.yml  test-worker.yml
aimodel/: build.py  convert.py  gbc.py  merge.py  remove.py
client/: Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json
client/src/: main.tsx
client/src/pages/: 404.tsx  root.tsx  route-map.tsx
client/src/pages/qr/: qr.tsx  route-map.tsx  url.tsx
parser/: Cargo.toml
parser/src/: asyncreq.rs  cache.rs  main.rs  output.rs  parser.rs  status.rs  weburl.rs
parser/src/parser/: crawl.rs  overlap.rs  vector.rs
pickle/: model_parser.pkl
server/: Dockerfile
server/src/: main.py
server/src/routes/: api.py
