[tool.poetry]
name = "sharkalyze"
version = "0.1.0"
description = ""
authors = ["AlexNg <contact@ngjx.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
