[tool.poetry]
name = "sharkalyze"
version = "0.1.0"
description = ""
authors = ["AlexNg <contact@ngjx.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.9.2"
pytest-cov = "^5.0.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
