[package]
name = "parser"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
url = "2.5.2"
lazy_static = "1.5.0"
regex = "1.10.6"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["stream"] }
futures-util = "0.3.30"
indicatif = "0.17.8"
term_size = "0.3.2"
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.125"
